Fixed form spacing between inputs and buttons

--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -32,6 +32,10 @@ input[type=password]{
     margin-left: 10px;
 }
 
+.formBtn{
+    margin-top: 10px;
+}
+
 #loginBtn{
     /* width: 100px;
     height: 40px; */
